--- a/website/about.html
+++ b/website/about.html
@@ -23,6 +23,61 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style> body {
+        background-color: #9dd973;
+      }
+        /* Three columns side by side */
+        .column {
+          /* float: left; */
+          width: 30%;
+          margin-bottom: 16px;
+          padding: 8px 8px;
+        }
+
+        /* Display the columns below each other instead of side by side on small screens */
+        /* @media screen and (max-width: 650px) {
+          .column {
+            width: 100%;
+            display: block;
+          }
+        } */
+
+        /* Add some shadows to create a card effect */
+
+
+        /* Some left and right padding inside the container */
+        .container {
+          padding: 16px 16px !important;
+        }
+
+        /* Clear floats */
+        .container::after, .row::after {
+          content: "";
+          clear: both;
+          display: table;
+        }
+
+        .title {
+          color: grey;
+        }
+
+        .button {
+          border: none;
+          outline: 0;
+          display: inline-block;
+          padding: 8px;
+          color: white;
+          background-color: #000;
+          text-align: center;
+          cursor: pointer;
+          width: 100%;
+        }
+
+        .button:hover {
+          background-color: #555;
+        }
+
+    </style>
   </head>
   <body>
     <!-- ****************NAVIGATION!!!!!!!!!*****************-->
@@ -62,5 +117,53 @@
       </div>
 </nav>
 <!-- ****************NAVIGATION!!!!!!!!!*****************-->
-<h1>
+<body>
+<br>
+<center><h1><b> About Us</b> </h1>
+<p> <t>We are 5 students coming from all over California during spring break '19, to UC Los Angeles for LA Hacks!
+The idea for this project is to parse through articles on the web, analyze the sentiment of popular stocks, and quantify the positive
+or negative attitudes to predict which stocks will be best for investing. Our project is constantly updated so that
+the information will be relevant and current. We used BeautifulSoup to parse through the articles and feeded it into the
+Google Natural Language API to generate sentiment scores. Based off of the data, we connected to Twilio to send updates to
+</p>
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="teampics/anderson.png" alt="Anderson" width= 200>
+      <div class="container">
+        <h2>Anderson Lam</h2>
+        <p class="title">UC Berkeley, 2022</p>
+        <p>Age: 18<br>Major: Computer Science & Data Science<br>Interests: None</p>
+        <a href= "https://www.linkedin.com/in/andersonkimlam/"> https://www.linkedin.com/in/andersonkimlam/</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="teampics/sinan.png" alt="Sinan" width= 200>
+      <div class="container">
+        <h2>Sinan Kamil</h2>
+        <p class="title">Grossmont College, 2021</p>
+        <p>Age: 19<br>Major: Computer Engineering<br>Interests: Working on Hardware projects, coding, video gaming.</p>
+        <a href= "https://www.linkedin.com/in/sinan-kamil-9b5597160/"> https://www.linkedin.com/in/sinan-kamil-9b5597160/</a>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="teampics/amy.png" alt="Amy" width= 200>
+      <div class="container">
+        <h2>Amy Huang</h2>
+        <p class="title">UC Berkeley, 2022</p>
+        <p>Age: 18<br>Major: Computer Science<br>Interests: visual arts & the Beatles</p>
+        <a href= "https://linkedin.com/in/amyxjhuang/"> https://linkedin.com/in/amyxjhuang/</a>
+      </div>
+    </div>
+  </div>
+</div>
+<p>
+</body>
+</center>
 </html>
