--- a/website/about.html
+++ b/website/about.html
@@ -26,6 +26,9 @@
     <style> body {
         background-color: #9dd973;
       }
+      h1 {
+        color: white;
+      }
         /* Three columns side by side */
         .column {
           /* float: left; */
@@ -117,15 +120,29 @@
       </div>
 </nav>
 <!-- ****************NAVIGATION!!!!!!!!!*****************-->
+<div class= "mx-5">
 <body>
 <br>
 <center><h1><b> About Us</b> </h1>
-<p> <t>We are 5 students coming from all over California during spring break '19, to UC Los Angeles for LA Hacks!
+<p> <b>Our Process: </b><t>We are 5 students coming from all over California during spring break '19, to UC Los Angeles for LA Hacks!
 The idea for this project is to parse through articles on the web, analyze the sentiment of popular stocks, and quantify the positive
 or negative attitudes to predict which stocks will be best for investing. Our project is constantly updated so that
 the information will be relevant and current. We used BeautifulSoup to parse through the articles and feeded it into the
 Google Natural Language API to generate sentiment scores. Based off of the data, we connected to Twilio to send updates to
+anybody who wants to get notified of the latest rankings/recommendations.</center> <br>What we used:
+<ul>
+  <li> Google Natural Language API</li>
+  <li> Bootstrap </li>
+  <li> BeautifulSoup </li>
+  <li> Google Firebase </li>
+  <li> Scrapy </li>
+  <li> Twilio </li>
+  <li> Yahoo Finance </li>
+  <li> Github </li>
 </p>
+<p> You can check out our Github repository here: <a href="https://github.com/andersonkimlam/lahacks2019"> https://github.com/andersonkimlam/lahacks2019</a>
+
+<center>
 <div class="row">
   <div class="column">
     <div class="card">
@@ -162,6 +179,29 @@ Google Natural Language API to generate sentiment scores. Based off of the data,
       </div>
     </div>
   </div>
+  <!-- <div class="column">
+    <div class="card">
+      <img src="teampics/chris.png" alt="Chris" width= 200>
+      <div class="container">
+        <h2>Chris Lam</h2>
+        <p class="title">UCLA, 2021</p>
+        <p>Age: 19<br>Major: Computer Science & Engineering, Linguistics Minor<br>Interests: music and learning</p>
+        <a href= "http://chrispylam.github.io"> http://chrispylam.github.io</a>
+      </div>
+    </div>
+  </div>
+</div> -->
+<div class="column">
+  <div class="card">
+    <img src="teampics/amy.png" alt="Amy" width= 200>
+    <div class="container">
+      <h2>Jatnael Montes</h2>
+      <p class="title">Heritage High School, 2019</p>
+      <p>Age: 17<br>Major: Prospective Computer Science<br>Interests: computer science</p>
+      <a href= "https://github.com/powerrides"> https://github.com/powerrides</a>
+    </div>
+  </div>
+</div>
 </div>
 <p>
 </body>
