--- a/website/home.html
+++ b/website/home.html
@@ -27,7 +27,7 @@
   <body>
     <!-- ****************NAVIGATION!!!!!!!!!*****************-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"><img src="logo2.png" height= 50><b>Dovevest</b></a>
+  <a class="navbar-brand" href="home.html"><img src="logo2.png" height= 50><b>Dovevest</b></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -83,27 +83,29 @@
   <div class="row">
     <div class="col-md-4">
       <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
-      <h3>Cloud Computable</h3>
+      <h3>What is Dovevest?</h3>
       <p>
-        Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo,
-        tortor mauris condimentum nibh.
+        Dovevest is a website to improve investor experience and provide its customers with high-quality service.
+
       </p>
     </div>
     <div class="col-md-4">
       <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-      <h3>Backwards Compatible</h3>
-      <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
+      <h3>Why us?</h3>
+      <p>We connect everyday people with a convenient and simple approach to the path of stock and cryptocurrency investment. </p>
     </div>
     <div class="col-md-4">
       <span class="glyphicon glyphicon-console" aria-hidden="true"></span>
-      <h3>Twillio Text Updates</h3>
+      <h3>Twilio Text Updates</h3>
       <p>
          <b>(951) 420-6701</b>
          <br>
-        Text this [number] to subscribe to Dovevest, and get updates on which stocks to buyyyy.
+        Text "hello" to (951) 420-6701 to subscribe to Dovevest, and get updates on the best stocks available.
       </p>
+
     </div>
   </div>
 </div>
+<p> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><center>$</center></p>
   </body>
 </html>
