small fixes + favicon

--- a/website/about.html
+++ b/website/about.html
@@ -4,6 +4,7 @@
   <head>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="logo2.png"/>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
       rel="stylesheet"
@@ -14,7 +15,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap 101 Template</title>
+    <title>Dovevest</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <!-- Optional Bootstrap theme -->
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -161,7 +162,7 @@ anybody who wants to get notified of the latest rankings/recommendations.</cente
       <img src="teampics/sinan.png" alt="Sinan" width= 200>
       <div class="container">
         <h2>Sinan Kamil</h2>
-        <p class="title">Grossmont College, 2021</p>
+        <p class="title">Grossmont College, 2022</p>
         <p>Age: 19<br>Major: Computer Engineering<br>Interests: Working on Hardware projects, coding, video gaming.</p>
         <a href= "https://www.linkedin.com/in/sinan-kamil-9b5597160/"> https://www.linkedin.com/in/sinan-kamil-9b5597160/</a>
       </div>
@@ -193,7 +194,7 @@ anybody who wants to get notified of the latest rankings/recommendations.</cente
 </div> -->
 <div class="column">
   <div class="card">
-    <img src="teampics/amy.png" alt="Amy" width= 200>
+    <img src="teampics/jet.png" alt="Jet" width= 200>
     <div class="container">
       <h2>Jatnael Montes</h2>
       <p class="title">Heritage High School, 2019</p>
