--- a/website/rankings.html
+++ b/website/rankings.html
@@ -4,6 +4,8 @@
   <head>
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="logo2.png"/>
+
     <script src="js/ranks.js" type= "text/javascript"> </script>
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
@@ -15,7 +17,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap 101 Template</title>
+    <title>Dovevest</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <!-- Optional Bootstrap theme -->
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
