--- a/website/firebase/index.html
+++ b/website/firebase/index.html
@@ -57,7 +57,7 @@
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
           <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="#">Text "HI" to (951) 420-6701</a>
+                  <a class="nav-link" href="#">Text "dove" to (951) 420-6701</a>
               </li>
           </ul>
       </div>
@@ -101,7 +101,7 @@
       <p>
          <b>(951) 420-6701</b>
          <br>
-        Text "hello" to (951) 420-6701 to subscribe to Dovevest, and get updates on the best stocks available.
+        Text "dove" to (951) 420-6701 to subscribe to Dovevest, and get updates on the best stocks available.
       </p>
 
     </div>
