--- a/website/firebase/home.html
+++ b/website/firebase/home.html
@@ -97,7 +97,7 @@
     </div>
     <div class="col-md-4">
       <span class="glyphicon glyphicon-console" aria-hidden="true"></span>
-      <h3>Twilio Text Updates</h3>
+      <h3>Text Updates</h3>
       <p>
          <b>(951) 420-6701</b>
          <br>
