--- a/website/firebase/about.html
+++ b/website/firebase/about.html
@@ -180,7 +180,7 @@ anybody who wants to get notified of the latest rankings/recommendations.</cente
       </div>
     </div>
   </div>
-  <!-- <div class="column">
+  <div class="column">
     <div class="card">
       <img src="teampics/chris.png" alt="Chris" width= 200>
       <div class="container">
@@ -191,7 +191,6 @@ anybody who wants to get notified of the latest rankings/recommendations.</cente
       </div>
     </div>
   </div>
-</div> -->
 <div class="column">
   <div class="card">
     <img src="teampics/jet.png" alt="Jet" width= 200>
